commit with meal plan wrapping issue in coach interface,video url issue in both coach and user interface...

--- a/css/style.css
+++ b/css/style.css
@@ -18242,3 +18242,17 @@ select.event:focus {
 .ui-datepicker {
    top:320px !important;
 }
+
+/*select option value with wrapping css*/
+.select2.narrow {
+    width: 460px;
+}
+.wrap.select2-selection--single {
+    height:100% !important;
+}
+.select2-container .wrap.select2-selection--single .select2-selection__rendered {
+    word-wrap: break-word;
+    text-overflow: inherit;
+    white-space: normal;
+}
+
